--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 }
 
 dependencies {
-// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
@@ -56,15 +56,15 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20160810'
 //Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-// 테스트 코드를 위한 Lombok 라이브러리
-    testCompileOnly 'org.projectlombok:lombok:1.18.12'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
-//JSON simple
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-//Aws S3
-// implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-// 유효성 검사
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+// 테스트 코드를 위한 Lombok 라이브ombok:lombok:1.18.12'
+//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+////JSON simple
+//    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+////Aws S3
+//// implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+//// 유효성 검사
+//    implementation 'org.springframework.boot:spring-boot-st러리
+//    testCompileOnly 'org.projectlarter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 }
