--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.11'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 // querydsl plugins 추가
-    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+//  id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'java'
 }
 
