--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 }
 
 dependencies {
-// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
@@ -65,6 +65,11 @@ dependencies {
 // implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 // 유효성 검사
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+//  thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+// hibernate
+    implementation 'org.hibernate:hibernate-core:{Hibernate version}'
+    implementation 'javax.persistence:javax.persistence-api:{JPA version}'
 }
 
 tasks.named('test') {
