--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-#db ??
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+#logging.level.org.hibernate.SQL=debug
+
+spring.jpa.defer-datasource-initialization=true
+spring.data.jpa.repositories.bootstrap-mode=default
+
