--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-#logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.jpa.defer-datasource-initialization=true
-spring.data.jpa.repositories.bootstrap-mode=default
-
+#spring.jpa.defer-datasource-initialization=true
+#spring.data.jpa.repositories.bootstrap-mode=default
