--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
 
+#h2 console ???
+#spring.h2.console.enabled=true
+
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=scott
+spring.datasource.password=tiger
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#??? ?? ?? ?? ????? ??? ? ??
+logging.level.org.hibernate.SQL=debug
+
+
+#spring.jpa.defer-datasource-initialization=true
+#spring.data.jpa.repositories.bootstrap-mode=default
