--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
-spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.username=scott
+spring.datasource.password=tiger
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.jpa.defer-datasource-initialization=true
 #spring.data.jpa.repositories.bootstrap-mode=default
+
