--- a/build.gradle
+++ b/build.gradle
@@ -30,38 +30,35 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+//    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    // websocket
-    implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    // querydsl dependencies
-    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     // spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     // spring security test
     testImplementation 'org.springframework.security:spring-security-test'
+    //oracle database connection
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc6:11.2.0.4'
+    implementation 'com.oracle.database.security:oraclepki'
+    implementation 'com.oracle.database.security:osdt_core'
+    implementation 'com.oracle.database.security:dsdt_cert'
+    // querydsl dependencies
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
     // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    implementation 'commons-codec:commons-codec:1.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    implementation 'com.auth0:java-jwt:3.13.0'
-    //JSON
-    implementation group: 'org.json', name: 'json', version: '20160810'
-    //Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     // 테스트 코드를 위한 Lombok 라이브러리
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    //JSON
+    implementation group: 'org.json', name: 'json', version: '20160810'
     //JSON simple
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-    //Aws S3
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     // 유효성 검사
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
