--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=scott
+spring.datasource.password=tiger
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
+
+server.port=8080
+server.tomcat.uri-encoding=UTF-8
+spring.h2.console.settings.web-allow-others=true
