1차 통합 및 리팩터링 진행(~ing)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=scott
-spring.datasource.password=tiger
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
-
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.include=ihealme
