--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 // queryDsl version 정보 추가
-/** buildscript {
- ext {
- queryDslVersion = "5.0.0"
- }
- }
- **/
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
 
 plugins {
     id 'org.springframework.boot' version '2.7.11'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 // querydsl plugins 추가
-//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'java'
 }
 
@@ -29,43 +28,46 @@ repositories {
 }
 
 dependencies {
-// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.22'
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+// runtimeOnly 'com.h2database:h2'
 // runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-// websocket
-// implementation 'org.springframework.boot:spring-boot-starter-websocket'
-// querydsl dependencies
-// implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-// implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//oracle database connection
+    runtimeOnly 'com.oracle.database.jdbc:ojdbc6:11.2.0.4'
+    implementation 'com.oracle.database.security:oraclepki'
+    implementation 'com.oracle.database.security:osdt_core'
+    implementation 'com.oracle.database.security:dsdt_cert'
+//thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 // spring security
-// implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 // spring security test
     testImplementation 'org.springframework.security:spring-security-test'
+// querydsl dependencies
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    implementation 'commons-codec:commons-codec:1.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    implementation 'com.auth0:java-jwt:3.13.0'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 //JSON
     implementation group: 'org.json', name: 'json', version: '20160810'
-//Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//JSON simple
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 // 테스트 코드를 위한 Lombok 라이브러리
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
-//JSON simple
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-//Aws S3
-// implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 // 유효성 검사
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+// devtool
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 }
 
 tasks.named('test') {
@@ -78,29 +80,28 @@ tasks.named("jar") {
 
 /*
 * queryDSL 설정 추가
-
+*/
 // querydsl에서 사용할 경로 설정
 def querydslDir = "$buildDir/generated/querydsl"
 // JPA 사용 여부와 사용할 경로를 설정
 querydsl {
-jpa = true
-querydslSourcesDir = querydslDir
+    jpa = true
+    querydslSourcesDir = querydslDir
 }
 // build 시 사용할 sourceSet 추가
 sourceSets {
-main.java.srcDir querydslDir
+    main.java.srcDir querydslDir
 }
 // querydsl 컴파일시 사용할 옵션 설정
 compileQuerydsl{
-options.annotationProcessorPath = configurations.querydsl
+    options.annotationProcessorPath = configurations.querydsl
 }
 // querydsl 이 compileClassPath 를 상속하도록 설정
 configurations {
-compileOnly {
-extendsFrom annotationProcessor
-}
-querydsl.extendsFrom compileClasspath
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+    querydsl.extendsFrom compileClasspath
 }
 
 targetCompatibility = JavaVersion.VERSION_11
-*/
