--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=tiger
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 
