MODIFY Community Post: 검증 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.datasource.password=tiger
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -24,3 +23,5 @@ JWT_TOKEN=youdestroyus
 JWT_EXPIRE_TIME=604800
 
 kakao.map.rest.api.key=0a931d3e53412cb779f034fc86ec4c96
+
+#spring.messages.basename=errors
