--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,6 @@ configurations {
 
 targetCompatibility = JavaVersion.VERSION_11
 
-bootJar {
-    duplicatesStrategy = 'exclude'
-}
+//bootJar {
+//    duplicatesStrategy = 'exclude'
+//}
