--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=scott
 spring.datasource.password=tiger
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
@@ -23,5 +23,3 @@ JWT_TOKEN=youdestroyus
 JWT_EXPIRE_TIME=604800
 
 kakao.map.rest.api.key=0a931d3e53412cb779f034fc86ec4c96
-
-#spring.messages.basename=errors
