--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 
